--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MatricularActivity"></activity>
+        <activity android:name=".AddCursoActivity"></activity>
+        <activity android:name=".EditEstudianteActivity" />
+        <activity android:name=".RegistarActivity" />
+        <activity android:name=".EditCursoActivity" />
+        <activity
+            android:name=".NavBarActivity"
+            android:label="@string/title_activity_nav_bar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ListCursoActivity" />
+        <activity android:name=".ListEstudianteActivity" />
+        <activity
+            android:name=".MatricularActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
